Refactored show course logic
